Mainly showing school district locations on a map

--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -4901,6 +4901,84 @@
     "print(\"Table showing the top 20 Schools with the Least percentage of students above average in 2015\")\n",
     "display(sortedSchools_2015[['District_Name', 'SCHOOL', 'Above Average 2015']].head(20))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################## CONRAD ###########################\n",
+    "\n",
+    "# We now get the least 10 perfoming schools across all the years\n",
+    "# Merge all DataFrames heads basing on the 'SCHOOL' column \n",
+    "merged_df = pd.merge(sortedSchools_2011[['District_Name', 'SCHOOL', 'Above Average 2011']], sortedSchools_2012[['District_Name', 'SCHOOL', 'Above Average 2012']], on='SCHOOL', how='inner')\n",
+    "merged_df = pd.merge(merged_df, sortedSchools_2013[['District_Name', 'SCHOOL', 'Above Average 2013']], on='SCHOOL', how='inner')\n",
+    "merged_df = pd.merge(merged_df, sortedSchools_2014[['SCHOOL', 'Above Average 2014']], on='SCHOOL', how='inner')\n",
+    "merged_df = pd.merge(merged_df, sortedSchools_2015[['SCHOOL', 'Above Average 2015']], on='SCHOOL', how='inner')\n",
+    "\n",
+    "merged_df['Above Average Percentage'] = (\n",
+    "    merged_df['Above Average 2011'] + \n",
+    "    merged_df['Above Average 2012'] + \n",
+    "    merged_df['Above Average 2013'] + \n",
+    "    merged_df['Above Average 2014'] + \n",
+    "    merged_df['Above Average 2015']\n",
+    ") / 5\n",
+    "\n",
+    "merged_df = merged_df.sort_values(by='Above Average Percentage', ascending=True)\n",
+    "merged_df = merged_df.drop_duplicates(subset='SCHOOL')\n",
+    " \n",
+    "print(\"Least Performing Schools Across All The Years\")\n",
+    "display(merged_df[\n",
+    "    [\n",
+    "        'District_Name', \n",
+    "        'SCHOOL', \n",
+    "        'Above Average Percentage'\n",
+    "    ]\n",
+    "].head(20))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We would now like to show the locations of these schools' districts on a map\n",
+    "# lets get the last 20 schools into their own dataframe\n",
+    "lastSchools_df = merged_df.head(20)\n",
+    "\n",
+    "# function to get coordinates for each school\n",
+    "def add_coordinates(district):\n",
+    "    # get the first name of the district coz some names have additionaldetails eg KOTIDO MAIN\n",
+    "    coords = geocoder.osm(district.split()[0] + ', UGANDA')\n",
+    "    return [coords.lat, coords.lng]\n",
+    "\n",
+    "# Add coordinates column to keep track of every school's coordinates\n",
+    "lastSchools_df['coordinates'] = lastSchools_df['District_Name'].apply(add_coordinates)\n",
+    "\n",
+    "# print(bestDistricts_df[['District_Name', 'coordinates']])\n",
+    "# Create a map centered at a Uganda\n",
+    "uganda_map = folium.Map(location=[1.373333, 32.290275], zoom_start=7)\n",
+    "\n",
+    "# indices to loop through the bestDistricts_df\n",
+    "ind = lastSchools_df.index\n",
+    "\n",
+    "# we need to add a marker for each location ie district\n",
+    "for i in range(len(ind)):\n",
+    "    folium.Marker(lastSchools_df['coordinates'].iloc[i],\n",
+    "                    popup= lastSchools_df['District_Name'].iloc[i]).add_to(uganda_map)\n",
+    "\n",
+    "# Display the map\n",
+    "uganda_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
