add members table

--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<style>\n",
+       "<style>    \n",
        "    table {\n",
        "        font-size: 1.2rem;\n",
        "    }\n",
@@ -72,7 +72,7 @@
    "source": [
     "# Styles for tables to be used in the notebook\n",
     "custom_styles = \"\"\"\n",
-    "<style>\n",
+    "<style>    \n",
     "    table {\n",
     "        font-size: 1.2rem;\n",
     "    }\n",
@@ -101,6 +101,130 @@
     "\n",
     "# Apply the custom CSS styles\n",
     "display(HTML(custom_styles))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <style>\n",
+       "        .members th {\n",
+       "            background-color: black;\n",
+       "            padding: 1rem;\n",
+       "            color: white;\n",
+       "        }\n",
+       "\n",
+       "        .members td {\n",
+       "            padding: 0.5rem;\n",
+       "            text-transform: uppercase;\n",
+       "        }\n",
+       "    </style>\n",
+       "\n",
+       "    <table class=\"members\" style=\"background-color: black\">\n",
+       "        <thead style=\"text-transform: uppercase;\">\n",
+       "            <tr>\n",
+       "                <th>Name</th>\n",
+       "                <th>Registration Number</th>\n",
+       "                <th>Student Number</th>\n",
+       "            </tr>\n",
+       "        </thead>\n",
+       "        <tbody>\n",
+       "            <tr>\n",
+       "                <td>Ssenono Jordan Michael</td>\n",
+       "                <td>21/U/1013</td>\n",
+       "                <td>2100701013</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td>Ariyo Ahumuza Nimusiima</td>\n",
+       "                <td>21/U/1657</td>\n",
+       "                <td>2100701657</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td>Serumaga Conrad David</td>\n",
+       "                <td>22/U/6881</td>\n",
+       "                <td>2200706881</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td>Ojok Emmanuel Nsubuga</td>\n",
+       "                <td>21/U/06816/PS</td>\n",
+       "                <td>2100706816</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td>Owomugisha Cronnie</td>\n",
+       "                <td>21/U/05910</td>\n",
+       "                <td>2100705910</td>\n",
+       "            </tr>\n",
+       "        </tbody>\n",
+       "    </table>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(HTML(\n",
+    "    \"\"\"\n",
+    "    <style>\n",
+    "        .members th {\n",
+    "            background-color: black;\n",
+    "            padding: 1rem;\n",
+    "            color: white;\n",
+    "        }\n",
+    "\n",
+    "        .members td {\n",
+    "            padding: 0.5rem;\n",
+    "            text-transform: uppercase;\n",
+    "        }\n",
+    "    </style>\n",
+    "\n",
+    "    <table class=\"members\" style=\"background-color: black\">\n",
+    "        <thead style=\"text-transform: uppercase;\">\n",
+    "            <tr>\n",
+    "                <th>Name</th>\n",
+    "                <th>Registration Number</th>\n",
+    "                <th>Student Number</th>\n",
+    "            </tr>\n",
+    "        </thead>\n",
+    "        <tbody>\n",
+    "            <tr>\n",
+    "                <td>Ssenono Jordan Michael</td>\n",
+    "                <td>21/U/1013</td>\n",
+    "                <td>2100701013</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td>Ariyo Ahumuza Nimusiima</td>\n",
+    "                <td>21/U/1657</td>\n",
+    "                <td>2100701657</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td>Serumaga Conrad David</td>\n",
+    "                <td>22/U/6881</td>\n",
+    "                <td>2200706881</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td>Ojok Emmanuel Nsubuga</td>\n",
+    "                <td>21/U/06816/PS</td>\n",
+    "                <td>2100706816</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td>Owomugisha Cronnie</td>\n",
+    "                <td>21/U/05910</td>\n",
+    "                <td>2100705910</td>\n",
+    "            </tr>\n",
+    "        </tbody>\n",
+    "    </table>\n",
+    "    \"\"\"\n",
+    "))"
    ]
   },
   {
