finding the accuracy of our model

--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -9105,6 +9105,72 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (MSE): 497828.7155637908\n",
+      " 2015 Total: 5            3.0\n",
+      "6           10.0\n",
+      "9           77.0\n",
+      "16           6.0\n",
+      "17          32.0\n",
+      "          ...   \n",
+      "3904        34.0\n",
+      "3905        12.0\n",
+      "3906        11.0\n",
+      "3914       449.0\n",
+      "3915    100705.0\n",
+      "Name: 2015 Total, Length: 2458, dtype: float64\n",
+      " \n",
+      "Predicted 2015 total:  5            3.733403\n",
+      "6           22.400416\n",
+      "9           65.956781\n",
+      "16           6.222338\n",
+      "17          26.133819\n",
+      "            ...      \n",
+      "3904        74.668054\n",
+      "3905        11.200208\n",
+      "3906        17.422546\n",
+      "3914       603.566773\n",
+      "3915    134729.792987\n",
+      "Name: 2014 Total, Length: 2458, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "numeric_columns = ['2011 Total', '2012 Total', '2013 Total', '2014 Total', '2015 Total']\n",
+    "dataset[numeric_columns] = dataset[numeric_columns].apply(pd.to_numeric, errors='coerce')\n",
+    "\n",
+    "# Drop rows with missing values\n",
+    "dataset.dropna(subset=numeric_columns, inplace=True)\n",
+    "\n",
+    "# Calculate the average growth rate from 2011 to 2015\n",
+    "growth_rates = []\n",
+    "for year in range(2011, 2015):\n",
+    "    growth_rate = (dataset[f'{year+1} Total'] - dataset[f'{year} Total']) / dataset[f'{year} Total']\n",
+    "    growth_rates.append(growth_rate.mean())\n",
+    "\n",
+    "average_growth_rate = np.mean(growth_rates)\n",
+    "\n",
+    "# Use the average growth rate to predict '2015 Total' based on '2014 Total'\n",
+    "predicted_2015_total = dataset['2014 Total'] * (1 + average_growth_rate)\n",
+    "\n",
+    "# Calculate the Mean Squared Error (MSE)\n",
+    "mse = mean_squared_error(dataset['2015 Total'], predicted_2015_total)\n",
+    "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "#low values indicate high accuracy\n",
+    "print(\" 2015 Total:\", dataset['2015 Total'])\n",
+    "print(\" \")\n",
+    "print(\"Predicted 2015 total: \",predicted_2015_total)\n"
+   ]
   }
  ],
  "metadata": {
