--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -9107,6 +9107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding accuracy of the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
