--- a/uace_analysis.ipynb
+++ b/uace_analysis.ipynb
@@ -9173,6 +9173,7 @@
     "# Calculate the Mean Squared Error (MSE)\n",
     "mse = mean_squared_error(dataset['2015 Total'], predicted_2015_total)\n",
     "print(\"Mean Squared Error (MSE):\", mse)\n",
+    "print(\" \")\n",
     "#low values indicate high accuracy\n",
     "print(\" 2015 Total:\", dataset['2015 Total'])\n",
     "print(\" \")\n",
